--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-plus": "^2.2.28",
     "jsfive": "^0.3.10",
     "leaflet": "^1.9.3",
+    "mitt": "^3.0.0",
     "vue": "^3.2.45"
   },
   "devDependencies": {
