--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^1.2.2",
     "element-plus": "^2.2.28",
-    "jsfive": "^0.3.10",
+    "l.movemarker": "^0.0.11",
     "leaflet": "^1.9.3",
     "mitt": "^3.0.0",
     "vue": "^3.2.45"
