--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "element-plus": "^2.2.28",
     "l.movemarker": "^0.0.11",
     "leaflet": "^1.9.3",
+    "leaflet.chinatmsproviders": "^3.0.6",
     "mitt": "^3.0.0",
+    "tilelayer-canvas": "^1.1.3",
     "vue": "^3.2.45"
   },
   "devDependencies": {
