--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ dist-ssr
 *.local
 
 # Editor directories and files
+.fleet/*
+.tours/*
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -23,4 +25,4 @@ dist-ssr
 *.sln
 *.sw?
 
-public/vdata/*.txt
+public/*
