--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "leaflet": "^1.9.3",
     "leaflet.chinatmsproviders": "^3.0.6",
     "mitt": "^3.0.0",
+    "percentile": "^1.6.0",
     "tilelayer-canvas": "^1.1.3",
     "vue": "^3.2.45"
   },
