--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.2.2",
+    "csvtojson": "^2.0.10",
     "element-plus": "^2.2.28",
     "l.movemarker": "^0.0.11",
     "leaflet": "^1.9.3",
