--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-plus": "^2.2.28",
     "l.movemarker": "^0.0.11",
     "leaflet": "^1.9.3",
+    "leaflet.animatedmarker": "^1.0.0",
     "leaflet.chinatmsproviders": "^3.0.6",
     "mitt": "^3.0.0",
     "percentile": "^1.6.0",
