--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   "dependencies": {
     "csvtojson": "^2.0.10",
     "element-plus": "^2.2.28",
-    "l.movemarker": "^0.0.11",
     "leaflet": "^1.9.3",
-    "leaflet.animatedmarker": "^1.0.0",
     "leaflet.chinatmsproviders": "^3.0.6",
+    "leaflet.motion": "^0.3.2",
     "mitt": "^3.0.0",
-    "percentile": "^1.6.0",
     "tilelayer-canvas": "^1.1.3",
     "vue": "^3.2.45"
   },
