--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
     "csvtojson": "^2.0.10",
     "element-plus": "^2.2.28",
     "leaflet": "^1.9.3",
