--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "csvtojson": "^2.0.10",
     "element-plus": "^2.2.28",
     "leaflet": "^1.9.3",
+    "leaflet-fullscreen": "^1.0.2",
     "leaflet.chinatmsproviders": "^3.0.6",
     "leaflet.motion": "^0.3.2",
     "mitt": "^3.0.0",
