--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "leaflet": "^1.9.3",
     "leaflet-fullscreen": "^1.0.2",
     "leaflet-sidebar-v2": "^3.2.3",
+    "leaflet-switch-basemap": "^1.0.4",
     "leaflet.chinatmsproviders": "^3.0.6",
     "leaflet.motion": "^0.3.2",
     "mitt": "^3.0.0",
